<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_grey"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iw_fondo"
        android:layout_width="match_parent"
        android:layout_height="461dp"
        android:scaleType="fitXY"
        android:src="@drawable/thecheezery" />

    <TextView
        android:id="@+id/tw_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_inicio"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:text="@string/button_start"
        android:textColor="@color/white" />

</LinearLayout>